--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "peerDependencies": {
+    "d3": "^5.9.2"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/herbowicz/reporting-sdk-demo.git"
