--- a/package.json
+++ b/package.json
@@ -4,10 +4,17 @@
   "description": "reporting sdk demo",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
-    "d3": "^5.9.2"
+    "c3": "^0.6.14",
+    "react": "^16.8.6",
+    "react-c3js": "^0.1.20",
+    "react-dom": "^16.8.6",
+    "react-scripts": "2.1.8"
   },
   "repository": {
     "type": "git",
