--- a/package.json
+++ b/package.json
@@ -1,20 +1,11 @@
 {
   "name": "reporting-sdk-demo",
-  "version": "1.5.0",
+  "version": "1.7.2",
   "description": "reporting sdk demo",
   "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "dependencies": {
-    "c3": "^0.6.14",
-    "react": "^16.8.6",
-    "react-c3js": "^0.1.20",
-    "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "./node_modules/.bin/babel src --out-file index.js"
   },
   "repository": {
     "type": "git",
@@ -25,10 +16,28 @@
     "sdk",
     "demo"
   ],
-  "author": "Greg Herbowicz",
+  "author": {
+    "name": "Greg Herbowicz"
+  },
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/herbowicz/reporting-sdk-demo/issues"
   },
-  "homepage": "https://github.com/herbowicz/reporting-sdk-demo#readme"
+  "homepage": "https://github.com/herbowicz/reporting-sdk-demo#readme",
+  "dependencies": {
+    "c3": "^0.6.14",
+    "react-c3js": "^0.1.20"
+  },
+  "peerDependencies": {
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-react": "^7.0.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
+  }
 }
